Fixed header css on mobile view.

--- a/app/less/sections/header.less
+++ b/app/less/sections/header.less
@@ -218,6 +218,11 @@ body.with-menu {
       left: 0;
       width: 100%;
 
+      .header-wrapper .icon {
+        margin-right: 0;
+        margin-left: 20px;
+      }
+
       .search {
         .suggestions {
           max-width: 100%;
